# sujin2

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: allocations.py  auth.py  dashboard.py  dispatches.py  load_plans.py  masters.py  orders.py  shipments.py
backend/app/core/: cache.py  config.py  database.py
backend/app/schemas/: allocations.py  auth.py  common.py  dashboard.py  dispatches.py  load_plans.py  masters.py  orders.py  shipments.py
backend/app/services/: auth_service.py  tms_service.py
db/: 00_create_tms_database.sql  01_tms_core.sql  02_seed_master_data.sql  03_seed_sample_data.sql  04_auth_support.sql  05_uuid_v7_defaults.sql  06_audit_columns.sql  07_professional_foundation.sql  08_shipment_order_canonicalization.sql  README.md
frontend/: .dockerignore  Dockerfile  README.md  pubspec.yaml
frontend/lib/: app.dart  main.dart
frontend/lib/core/auth/: session_controller.dart
frontend/lib/core/network/: api_client.dart  demo_payloads.dart
frontend/lib/core/router/: app_router.dart
frontend/lib/core/theme/: app_theme.dart
frontend/lib/core/utils/: tms_formatters.dart
frontend/lib/core/widgets/: brand_logo.dart  data_panel.dart  metric_card.dart  page_banner.dart  shell_frame.dart
frontend/scripts/: postprocess_web_build.py
frontend/test/: widget_test.dart
frontend/web/: index.html  manifest.json
infra/aws/: README.md
infra/aws/terraform/: main.tf  outputs.tf  variables.tf
(+8 files in other folders)
