[project]
name = "sujin-tms-api"
version = "0.1.0"
description = "FastAPI backend for the Sujin TMS platform"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "psycopg[binary,pool]>=3.2,<4.0",
  "pydantic-settings>=2.6,<3.0",
  "redis>=5.2,<6.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8,<1.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
